<?xml version="1.0"?>
<package format="3">
  <name>multi_cam_publisher</name>
  <version>1.0.0</version>
  <description>Six-camera V4L2 mmap publisher for oToCAM/DES2MIPI camera chains.</description>

  <maintainer email="lin248044@gmail.com">Lin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
