<?xml version="1.0"?>
<package format="3">
  <name>prius_vehicle_status_adapter</name>
  <version>0.1.0</version>
  <description>Adapter from Prius CAN status to generic ROS 2 vehicle topics and optional Autoware vehicle status topics.</description>
  <maintainer email="user@example.com">ACE428 Prius Project</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>prius_can_interface</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
