<?xml version="1.0"?>
<package format="3">
  <name>prius_mti630_driver</name>
  <version>0.1.0</version>
  <description>Pure Python Xbus MTData2 ROS 2 driver/bringup package for Movella/Xsens MTi-630 AHRS used in the Prius project.</description>
  <maintainer email="user@example.com">Prius Project</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
