<?xml version="1.0"?>
<package format="3">
  <name>multi_cam_publisher</name>
  <version>0.1.0</version>
  <description>V4L2 mmap multi-camera publisher for Prius vision system</description>

  <maintainer email="lin248044@gmail.com">lin248044</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <exec_depend>ros-humble-cv-bridge</exec_depend>
  <exec_depend>ros-humble-image-transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
